--- a/deep_Q_learning/keras_tensorflow/qfitten_deepQlearning_keras_lunarlander.ipynb
+++ b/deep_Q_learning/keras_tensorflow/qfitten_deepQlearning_keras_lunarlander.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q-Learner for cartpole"
+    "# Q-Learner for lunar lander\n"
    ]
   },
   {
